fix (portfolio): body height on mobile

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -13,7 +13,7 @@ html {
 body {
 	display: flex;
 	flex-direction: column;
-	height: calc(100vh - 2 * var(--gutter));
+	height: calc(100dvh - 2 * var(--gutter));
 	margin: 0;
 	padding: var(--gutter);
 	color: var(--fg);
